--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World from Arunksam
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Checking HTML Hosting</title>
+</head>
+<body>
+    <h1>Hosting a Simple HTML site</h1>
+</body>
+</html>
